--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <title>Dynamic Application</title>
-        <link rel="stylesheet" href="./styles/general_styles.css">
-        <script src="./actions/action_it.js" defer></script>
+        <link rel="stylesheet" href="general_styles.css">
+        <script src="action_it.js" defer></script>
     </head>
     <body onload="greet()">
         <button onclick="alert('Hello World')">Click me</button>
